# CL2D

./: EvDector.py  LineModWapper.py  MvCore.py  MvDector.py  README.md  TemplateBuilder.py  TemplateFactory.py  draw_pr.py  evaluate.py  test.py
linemodcore/: CMakeLists.txt  README.md
linemodcore/halide_src/: quant_ori.h  quant_ori.schedule.h  quant_ori_gen  quant_ori_gen.cpp  readme.txt
linemodcore/include/: NmsUtility.hpp  fusion.h  line2Dup.h  quant_ori.h
linemodcore/include/wykobi/: wykobi_build
linemodcore/src/: LineModCore.cpp  NmsUtility.cpp  line2Dup.cpp
